2008-01-27  Zoltan Varga  <vargaz@gmail.com>

	* mini-exceptions.c (ves_icall_System_Security_SecurityFrame_GetSecurityFrame): 
	Fix CAS on ia64.
	(ves_icall_System_Security_SecurityFrame_GetSecurityStack): Ditto.

	* mini-s390x.c: Use is_imm16 instead of is_uimm16 when checking whenever s390_aghi
	can be used since it takes a 16 bit signed immediate.

	* inssel-s390x.brg: Fix OP_SETRET.

	* mini-s390x.c (mono_arch_output_basic_block): Fix OP_BREAK.

	* mini-codegen.c (mono_opcode_to_cond): Fix a warning.

	* mini-s390x.c cpu-s390x.md: Implement sext.i4 properly by sign extension.

	* mini.c (mono_create_delegate_trampoline): Don't use mono_create_ftpntr here.

	* mini-trampolines.c (mono_delegate_trampoline): Use mono_get_addr_from_ftnptr
	in one place.

	* mini-ia64.h mini-ia64.c: Add minimal support for the delegate trampoline 
	stuff.

	* mini.h inssel-x86.brg inssel-amd64.brg tramp-alpha.c tramp-ia64.c: Get rid
	of the unused mono_arch_patch_delegate_trampoline stuff.

2008-01-26  Zoltan Varga  <vargaz@gmail.com>

	* basic-long.cs: Move the fp related tests to basic-float.cs.

	* mini-ops.h (OP_OUTARG_FREG_R4): New opcode.

	* mini-ia64.c inssel-ia64.brg: Implement proper R4 argument passing.

	* basic-calls.cs: Add a test for proper float argument passing.

	* mini-ia64.h (mono_ia64_context_get_ip): Do not substract 1 from the ip
	if the context corresponds to an exception received through a signal.

	* exceptions.cs: Add a test for nullref handling at the start of a try
	clause.

	* mini-ia64.c (mono_arch_call_opcode): Fix ia64 argument passing.

	* jit-icalls.c (mono_break): New JIT icall.

	* mini-<ARCH>.c: Use mono_break instead of mono_arch_break.

	* mini-arm.c (arm_patch): Add support for patching the blx calling sequence.

2008-01-25  Zoltan Varga  <vargaz@gmail.com>

	* cpu-*.md: Get rid of unused opcodes.

	* cpu-g4.md: Rename this to cpu-ppc.md for consistency with other archs.
